Fixes for EditorConfig

--- a/source/form.html
+++ b/source/form.html
@@ -8,8 +8,7 @@
 <header class="main-header">
   <nav class="main-menu">
     <a class="logo-link">
-      <img src="img/logo.svg" class="logo" width="154" height="64"
-           alt="Сайт приложения «PINK», раскрашивающего мир.">
+      <img src="img/logo.svg" class="logo" width="154" height="64" alt="Сайт приложения «PINK», раскрашивающего мир.">
     </a>
     <button class="main-menu__toggle main-menu__toggle--open" type="button">Открыть меню</button>
     <ul class="main-menu__list">
