--- a/source/index.html
+++ b/source/index.html
@@ -7,8 +7,7 @@
   <body>
     <header class="main-header">
       <nav class="main-menu">
-        <img class="logo" src="img/logo.svg" width="154" height="64"
-             alt="Сайт приложения «PINK», раскрашивающего мир.">
+        <img class="logo" src="img/logo.svg" width="154" height="64" alt="Сайт приложения «PINK», раскрашивающего мир.">
         <button class="main-menu__toggle main-menu__toggle--open" type="button">Открыть меню</button>
         <ul class="main-menu__list">
           <li class="main-menu__list-item">
@@ -28,8 +27,7 @@
       <div class="main-header__content-wrapper main-header__content-wrapper--index-page">
         <div class="main-header__content">
           <h1 class="visually-hidden">Приложение «PINK», раскрашивающее мир.</h1>
-          <img class="main-header__promo-image" src="img/promo-image.png" alt="Приложение «PINK», раскрашивающее мир."
-               width="100" height="200">
+          <img class="main-header__promo-image" src="img/promo-image.png" alt="Приложение «PINK», раскрашивающее мир." width="100" height="200">
         </div>
       </div>
     </header>
@@ -40,20 +38,17 @@
         </a>
         <ul class="download-links__list">
           <li class="download-links__list-item">
-            <a class="download-links__list-link download-links__list-link--apple"
-               href="https://itunes.apple.com/ru/store">
+            <a class="download-links__list-link download-links__list-link--apple" href="https://itunes.apple.com/ru/store">
               <h3 class="visually-hidden">Apple</h3>
             </a>
           </li>
           <li class="download-links__list-item">
-            <a class="download-links__list-link download-links__list-link--android"
-               href="https://play.google.com/store/apps?hl=ru">
+            <a class="download-links__list-link download-links__list-link--android" href="https://play.google.com/store/apps?hl=ru">
               <h3 class="visually-hidden">Android</h3>
             </a>
           </li>
           <li class="download-links__list-item">
-            <a class="download-links__list-link download-links__list-link--windows"
-               href="https://www.microsoft.com/ru-ru/store/appsvnext/windows-phone">
+            <a class="download-links__list-link download-links__list-link--windows" href="https://www.microsoft.com/ru-ru/store/appsvnext/windows-phone">
               <h3 class="visually-hidden">Windows</h3>
             </a>
           </li>
@@ -83,8 +78,7 @@
               новых</p>
           </li>
         </ul>
-        <img class="main-features__promo-image" src="img/promo-image2.png" alt="Демонстрационная картинка."
-             width="100" height="200">
+        <img class="main-features__promo-image" src="img/promo-image2.png" alt="Демонстрационная картинка." width="100" height="200">
       </section>
       <section class="reviews">
         <h2 class="visually-hidden">Отзывы пользователей о приложении</h2>
