--- a/source/photo.html
+++ b/source/photo.html
@@ -8,8 +8,7 @@
     <header class="main-header">
       <nav class="main-menu">
         <a class="logo-link">
-          <img src="img/logo.svg" class="logo" width="154" height="64"
-             alt="Сайт приложения «PINK», раскрашивающего мир.">
+          <img src="img/logo.svg" class="logo" width="154" height="64" alt="Сайт приложения «PINK», раскрашивающего мир.">
         </a>
         <button class="main-menu__toggle main-menu__toggle--open" type="button">Открыть меню</button>
         <ul class="main-menu__list">
@@ -42,9 +41,7 @@
         <ul class="gallery__list">
           <li class="gallery__list-item">
             <article class="note">
-              <img class="note__image note__image--panorama note__image--panorama-of-the-day" src="img/pic1.jpg"
-                   alt="PINK. Анна: Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в
-                   перископе, задавайте свои вопросы!" width="200" height="80"/>
+              <img class="note__image note__image--panorama note__image--panorama-of-the-day" src="img/pic1.jpg" alt="PINK. Анна: Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!" width="200" height="80"/>
               <h2 class="note__author">Анна</h2>
               <div class="note__time">(5 минут назад)</div>
               <p>Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте
@@ -57,8 +54,7 @@
           </li>
           <li class="gallery__list-item">
             <article class="note">
-              <img class="note__image" src="img/pic2.jpg"
-                   alt="PINK. Левон: Вчера он на луну летал, сегодня в руки к нам попал." width="200" height="80"/>
+              <img class="note__image" src="img/pic2.jpg" alt="PINK. Левон: Вчера он на луну летал, сегодня в руки к нам попал." width="200" height="80"/>
               <h2 class="note__author">Левон</h2>
               <div class="note__time">(5 часов назад)</div>
               <p class="note__content">Вчера он на луну летал, сегодня в руки к нам попал.</p>
@@ -70,8 +66,7 @@
           </li>
           <li class="gallery__list-item">
             <article class="note">
-              <img class="note__image" src="img/pic2.jpg"
-                   alt="PINK. Антон: Соседи будут рады!" width="200" height="80"/>
+              <img class="note__image" src="img/pic2.jpg" alt="PINK. Антон: Соседи будут рады!" width="200" height="80"/>
               <h2 class="note__author">Антон</h2>
               <div class="note__time">(12 часов назад)</div>
               <p class="note__content">Соседи будут рады!</p>
@@ -83,8 +78,7 @@
           </li>
           <li class="gallery__list-item">
             <article class="note">
-              <img class="note__image" src="img/pic2.jpg"
-                   alt="PINK. Борис: Здесь могла быть ваша цитата о высоком и вечном." width="200" height="80"/>
+              <img class="note__image" src="img/pic2.jpg" alt="PINK. Борис: Здесь могла быть ваша цитата о высоком и вечном." width="200" height="80"/>
               <h2 class="note__author">Борис</h2>
               <div class="note__time">(20 часов назад)</div>
               <p class="note__content">Здесь могла быть ваша цитата о высоком и вечном.</p>
@@ -96,8 +90,7 @@
           </li>
           <li class="gallery__list-item">
             <article class="note">
-              <img class="note__image" src="img/pic2.jpg"
-                   alt="PINK. Сергей: Самая кубанская в мире!" width="200" height="80"/>
+              <img class="note__image" src="img/pic2.jpg" alt="PINK. Сергей: Самая кубанская в мире!" width="200" height="80"/>
               <h2 class="note__author">Сергей</h2>
               <div class="note__time">(25 часов назад)</div>
               <p class="note__content">Самая кубанская в мире!</p>
@@ -109,8 +102,7 @@
           </li>
           <li class="gallery__list-item">
             <article class="note">
-              <img class="note__image" src="img/pic2.jpg"
-                   alt="PINK. Максим: Где снег-то?" width="200" height="80"/>
+              <img class="note__image" src="img/pic2.jpg" alt="PINK. Максим: Где снег-то?" width="200" height="80"/>
               <h2 class="note__author">Максим</h2>
               <div class="note__time">(40 часов назад)</div>
               <p class="note__content">Где снег-то?</p>
@@ -122,8 +114,7 @@
           </li>
           <li class="gallery__list-item">
             <article class="note">
-              <img class="note__image" src="img/pic2.jpg"
-                   alt="PINK. Надежда: Всем GM и взаимные лайки!" width="200" height="80"/>
+              <img class="note__image" src="img/pic2.jpg" alt="PINK. Надежда: Всем GM и взаимные лайки!" width="200" height="80"/>
               <h2 class="note__author">Надежда</h2>
               <div class="note__time">(45 часов назад)</div>
               <p class="note__content">Всем GM и взаимные лайки!</p>
