--- a/source/form.html
+++ b/source/form.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <header class="main-header">
+  <a class="logo-link" href="index.html">
+    <img src="img/logo.svg" class="logo" width="154" height="64" alt="Сайт приложения «PINK», раскрашивающего мир.">
+  </a>
   <nav class="main-menu">
-    <a class="logo-link">
-      <img src="img/logo.svg" class="logo" width="154" height="64" alt="Сайт приложения «PINK», раскрашивающего мир.">
-    </a>
     <button class="main-menu__toggle main-menu__toggle--open" type="button">Открыть меню</button>
     <ul class="main-menu__list">
       <li class="main-menu__list-item">
@@ -19,7 +19,7 @@
         <a class="main-menu__list-link" href="photo.html">Фотографии</a>
       </li>
       <li class="main-menu__list-item">
-        <span class="main-menu__list-link">Конкурс</span>
+        <a class="main-menu__list-link">Конкурс</a>
       </li>
       <li class="main-menu__list-item">
         <a class="main-menu__list-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
@@ -33,6 +33,7 @@
   </div>
 </header>
 <main>
+  <h1 class="page-title">Конкурс на самое безбашенное путешествие с Пинк</h1>
   <section class="content-header">
     <p>Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста,
       заполните форму ниже:</p>
