--- a/source/photo.html
+++ b/source/photo.html
@@ -6,17 +6,17 @@
   </head>
   <body>
     <header class="main-header">
+      <a class="logo-link" href="index.html">
+        <img src="img/logo.svg" class="logo" width="154" height="64" alt="Сайт приложения «PINK», раскрашивающего мир.">
+      </a>
       <nav class="main-menu">
-        <a class="logo-link">
-          <img src="img/logo.svg" class="logo" width="154" height="64" alt="Сайт приложения «PINK», раскрашивающего мир.">
-        </a>
         <button class="main-menu__toggle main-menu__toggle--open" type="button">Открыть меню</button>
         <ul class="main-menu__list">
           <li class="main-menu__list-item">
             <a class="main-menu__list-link" href="index.html">Главная</a>
           </li>
           <li class="main-menu__list-item">
-            <span class="main-menu__list-link">Фотографии</span>
+            <a class="main-menu__list-link">Фотографии</a>
           </li>
           <li class="main-menu__list-item">
             <a class="main-menu__list-link" href="form.html">Конкурс</a>
@@ -26,13 +26,9 @@
           </li>
         </ul>
       </nav>
-      <div class="main-header__content-wrapper">
-        <div class="main-header__content">
-          <h1 class="visually-hidden">Фотографии пользователей</h1>
-        </div>
-      </div>
     </header>
     <main>
+      <h1 class="page-title">Фотографии пользователей</h1>
       <section class="content-header">
         <p>Взгляните на фотографии, которые выкладывают пользователи!</p>
         <p>Видите, как не хватает ваших?</p>
@@ -42,11 +38,14 @@
           <li class="gallery__list-item">
             <article class="note">
               <img class="note__image note__image--panorama note__image--panorama-of-the-day" src="img/pic1.jpg" alt="PINK. Анна: Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!" width="200" height="80"/>
-              <h2 class="note__author">Анна</h2>
+              <p class="note__author">Анна</p>
               <div class="note__time">(5 минут назад)</div>
               <p>Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте
                 свои вопросы!</p>
               <div class="note__likes">
+                <button class="note__likes-button" type="button">
+                  <span class="visually-hidden">Нажми, если нравится</span>
+                </button>
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">215</span>
               </div>
@@ -55,10 +54,13 @@
           <li class="gallery__list-item">
             <article class="note">
               <img class="note__image" src="img/pic2.jpg" alt="PINK. Левон: Вчера он на луну летал, сегодня в руки к нам попал." width="200" height="80"/>
-              <h2 class="note__author">Левон</h2>
+              <p class="note__author">Левон</p>
               <div class="note__time">(5 часов назад)</div>
               <p class="note__content">Вчера он на луну летал, сегодня в руки к нам попал.</p>
               <div class="note__likes">
+                <button class="note__likes-button" type="button">
+                  <span class="visually-hidden">Нажми, если нравится</span>
+                </button>
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">356</span>
               </div>
@@ -67,10 +69,13 @@
           <li class="gallery__list-item">
             <article class="note">
               <img class="note__image" src="img/pic2.jpg" alt="PINK. Антон: Соседи будут рады!" width="200" height="80"/>
-              <h2 class="note__author">Антон</h2>
+              <p class="note__author">Антон</p>
               <div class="note__time">(12 часов назад)</div>
               <p class="note__content">Соседи будут рады!</p>
               <div class="note__likes">
+                <button class="note__likes-button" type="button">
+                  <span class="visually-hidden">Нажми, если нравится</span>
+                </button>
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">666</span>
               </div>
@@ -79,10 +84,13 @@
           <li class="gallery__list-item">
             <article class="note">
               <img class="note__image" src="img/pic2.jpg" alt="PINK. Борис: Здесь могла быть ваша цитата о высоком и вечном." width="200" height="80"/>
-              <h2 class="note__author">Борис</h2>
+              <p class="note__author">Борис</p>
               <div class="note__time">(20 часов назад)</div>
               <p class="note__content">Здесь могла быть ваша цитата о высоком и вечном.</p>
               <div class="note__likes">
+                <button class="note__likes-button" type="button">
+                  <span class="visually-hidden">Нажми, если нравится</span>
+                </button>
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">215</span>
               </div>
@@ -91,10 +99,13 @@
           <li class="gallery__list-item">
             <article class="note">
               <img class="note__image" src="img/pic2.jpg" alt="PINK. Сергей: Самая кубанская в мире!" width="200" height="80"/>
-              <h2 class="note__author">Сергей</h2>
+              <p class="note__author">Сергей</p>
               <div class="note__time">(25 часов назад)</div>
               <p class="note__content">Самая кубанская в мире!</p>
               <div class="note__likes">
+                <button class="note__likes-button" type="button">
+                  <span class="visually-hidden">Нажми, если нравится</span>
+                </button>
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">4</span>
               </div>
@@ -103,10 +114,13 @@
           <li class="gallery__list-item">
             <article class="note">
               <img class="note__image" src="img/pic2.jpg" alt="PINK. Максим: Где снег-то?" width="200" height="80"/>
-              <h2 class="note__author">Максим</h2>
+              <p class="note__author">Максим</p>
               <div class="note__time">(40 часов назад)</div>
               <p class="note__content">Где снег-то?</p>
               <div class="note__likes">
+                <button class="note__likes-button" type="button">
+                  <span class="visually-hidden">Нажми, если нравится</span>
+                </button>
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">150</span>
               </div>
@@ -115,10 +129,13 @@
           <li class="gallery__list-item">
             <article class="note">
               <img class="note__image" src="img/pic2.jpg" alt="PINK. Надежда: Всем GM и взаимные лайки!" width="200" height="80"/>
-              <h2 class="note__author">Надежда</h2>
+              <p class="note__author">Надежда</p>
               <div class="note__time">(45 часов назад)</div>
               <p class="note__content">Всем GM и взаимные лайки!</p>
               <div class="note__likes">
+                <button class="note__likes-button" type="button">
+                  <span class="visually-hidden">Нажми, если нравится</span>
+                </button>
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">2560</span>
               </div>
