--- a/source/form.html
+++ b/source/form.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <header class="main-header">
-  <a class="logo-link" href="index.html">
+  <a class="logo-wrapper" href="index.html">
     <img src="img/logo.svg" class="logo" width="154" height="64" alt="Сайт приложения «PINK», раскрашивающего мир.">
   </a>
   <nav class="main-menu">
@@ -26,14 +26,11 @@
       </li>
     </ul>
   </nav>
-  <div class="main-header__content-wrapper">
-    <div class="main-header__content">
-      <h1 class="visually-hidden">Конкурс на самое безбашенное путешествие с Пинк</h1>
-    </div>
-  </div>
 </header>
 <main>
-  <h1 class="page-title">Конкурс на самое безбашенное путешествие с Пинк</h1>
+  <section class="page-title">
+    <h1 class="page-title__text">Конкурс на самое безбашенное путешествие с Пинк</h1>
+  </section>
   <section class="content-header">
     <p>Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту! Пожалуйста,
       заполните форму ниже:</p>
