--- a/source/index.html
+++ b/source/index.html
@@ -7,9 +7,9 @@
   <body>
     <header class="main-header">
       <nav class="main-menu">
-        <div class="logo-wrapper">
+        <a class="logo-wrapper">
           <img class="logo" src="img/logo.svg" width="154" height="64" alt="Сайт приложения «PINK», раскрашивающего мир.">
-        </div>
+        </a>
         <button class="main-menu__toggle main-menu__toggle--open" type="button">Открыть меню</button>
         <ul class="main-menu__list">
           <li class="main-menu__list-item">
