--- a/source/photo.html
+++ b/source/photo.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="main-header">
-      <a class="logo-link" href="index.html">
+      <a class="logo-wrapper" href="index.html">
         <img src="img/logo.svg" class="logo" width="154" height="64" alt="Сайт приложения «PINK», раскрашивающего мир.">
       </a>
       <nav class="main-menu">
@@ -28,7 +28,9 @@
       </nav>
     </header>
     <main>
-      <h1 class="page-title">Фотографии пользователей</h1>
+      <section class="page-title page-title--index-page">
+        <h1 class="page-title__text">Фотографии пользователей</h1>
+      </section>
       <section class="content-header">
         <p>Взгляните на фотографии, которые выкладывают пользователи!</p>
         <p>Видите, как не хватает ваших?</p>
@@ -42,13 +44,10 @@
               <div class="note__time">(5 минут назад)</div>
               <p>Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте
                 свои вопросы!</p>
-              <div class="note__likes">
-                <button class="note__likes-button" type="button">
-                  <span class="visually-hidden">Нажми, если нравится</span>
-                </button>
+              <a class="note__likes" href="#">
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">215</span>
-              </div>
+              </a>
             </article>
           </li>
           <li class="gallery__list-item">
@@ -57,13 +56,10 @@
               <p class="note__author">Левон</p>
               <div class="note__time">(5 часов назад)</div>
               <p class="note__content">Вчера он на луну летал, сегодня в руки к нам попал.</p>
-              <div class="note__likes">
-                <button class="note__likes-button" type="button">
-                  <span class="visually-hidden">Нажми, если нравится</span>
-                </button>
+              <a class="note__likes" href="#">
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">356</span>
-              </div>
+              </a>
             </article>
           </li>
           <li class="gallery__list-item">
@@ -72,13 +68,10 @@
               <p class="note__author">Антон</p>
               <div class="note__time">(12 часов назад)</div>
               <p class="note__content">Соседи будут рады!</p>
-              <div class="note__likes">
-                <button class="note__likes-button" type="button">
-                  <span class="visually-hidden">Нажми, если нравится</span>
-                </button>
+              <a class="note__likes" href="#">
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">666</span>
-              </div>
+              </a>
             </article>
           </li>
           <li class="gallery__list-item">
@@ -87,13 +80,10 @@
               <p class="note__author">Борис</p>
               <div class="note__time">(20 часов назад)</div>
               <p class="note__content">Здесь могла быть ваша цитата о высоком и вечном.</p>
-              <div class="note__likes">
-                <button class="note__likes-button" type="button">
-                  <span class="visually-hidden">Нажми, если нравится</span>
-                </button>
+              <a class="note__likes" href="#">
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">215</span>
-              </div>
+              </a>
             </article>
           </li>
           <li class="gallery__list-item">
@@ -102,13 +92,10 @@
               <p class="note__author">Сергей</p>
               <div class="note__time">(25 часов назад)</div>
               <p class="note__content">Самая кубанская в мире!</p>
-              <div class="note__likes">
-                <button class="note__likes-button" type="button">
-                  <span class="visually-hidden">Нажми, если нравится</span>
-                </button>
+              <a class="note__likes" href="#">
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">4</span>
-              </div>
+              </a>
             </article>
           </li>
           <li class="gallery__list-item">
@@ -117,13 +104,10 @@
               <p class="note__author">Максим</p>
               <div class="note__time">(40 часов назад)</div>
               <p class="note__content">Где снег-то?</p>
-              <div class="note__likes">
-                <button class="note__likes-button" type="button">
-                  <span class="visually-hidden">Нажми, если нравится</span>
-                </button>
+              <a class="note__likes" href="#">
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">150</span>
-              </div>
+              </a>
             </article>
           </li>
           <li class="gallery__list-item">
@@ -132,13 +116,10 @@
               <p class="note__author">Надежда</p>
               <div class="note__time">(45 часов назад)</div>
               <p class="note__content">Всем GM и взаимные лайки!</p>
-              <div class="note__likes">
-                <button class="note__likes-button" type="button">
-                  <span class="visually-hidden">Нажми, если нравится</span>
-                </button>
+              <a class="note__likes" href="#">
                 <span class="note__likes-title">Нравится:</span>
                 <span class="note__likes-value">2560</span>
-              </div>
+              </a>
             </article>
           </li>
         </ul>
