--- a/source/index.html
+++ b/source/index.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header class="main-header">
-      <a class="logo-wrapper">
-        <img class="logo" src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Сайт приложения «PINK», раскрашивающего мир.">
+      <a class="logo">
+        <img class="logo__icon" src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Сайт приложения «PINK», раскрашивающего мир.">
       </a>
       <nav class="main-menu">
         <button class="main-menu__toggle main-menu__toggle--open" type="button">
