--- a/source/photo.html
+++ b/source/photo.html
@@ -9,47 +9,53 @@
   </head>
   <body>
     <header class="main-header">
-      <a class="logo" href="index.html">
-        <img class="logo__icon" src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Сайт приложения «PINK», раскрашивающего мир.">
-      </a>
-      <nav class="main-menu">
-        <button class="main-menu__toggle main-menu__toggle--open" type="button">
-          <span class="visually-hidden">Открыть меню</span>
-          <svg class="main-menu__toggle-icon main-menu__toggle-icon--open" version="1.0" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50px" height="24px" viewBox="0 0 50 24" enable-background="new 0 0 50 24" xml:space="preserve">
-            <g id="miu">
-              <g id="editor_list_view_hambuger_menu_glyph">
-                <g>
-                  <path id="path-1" fill="#FFFFFF" d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z"/>
-                </g>
-                <g>
-                  <path id="path-1_1_" fill="#FFFFFF" d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z"/>
+      <div class="main-header__content">
+        <a class="logo" href="index.html">
+          <picture>
+            <source media="(min-width: 661px)" srcset="img/logo-pink-white-desktop.svg">
+            <source media="(min-width: 321px)" srcset="img/logo-pink-white-tablet.svg">
+            <img class="logo__icon" src="img/logo-pink-white-mobile.svg" width="75" height="22" alt="Сайт приложения «PINK», раскрашивающего мир.">
+          </picture>
+        </a>
+        <nav class="main-menu main-menu--opened">
+          <button class="main-menu__toggle" type="button">
+            <span class="visually-hidden">Открыть меню</span>
+            <svg class="main-menu__toggle-icon main-menu__toggle-icon--open" version="1.0" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="50px" height="24px" viewBox="0 0 50 24" enable-background="new 0 0 50 24" xml:space="preserve">
+              <g id="miu">
+                <g id="editor_list_view_hambuger_menu_glyph">
+                  <g>
+                    <path id="path-1" fill="#FFFFFF" d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z"/>
+                  </g>
+                  <g>
+                    <path id="path-1_1_" fill="#FFFFFF" d="M1.137,0C0.51,0,0,0.428,0,1.01v1.981c0,0.558,0.494,1.01,1.139,1.01h47.671 c0.628,0,1.138-0.428,1.138-1.01V1.01c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,10.003C0.51,10.003,0,10.431,0,11.013v1.98 c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01v-1.98c0-0.558-0.494-1.01-1.138-1.01H1.137z M1.137,20.005C0.51,20.005,0,20.434,0,21.016v1.981c0,0.557,0.494,1.01,1.139,1.01h47.671c0.628,0,1.138-0.428,1.138-1.01 v-1.981c0-0.558-0.494-1.011-1.138-1.011H1.137z"/>
+                  </g>
                 </g>
               </g>
-            </g>
-          </svg>
-          <svg class="main-menu__toggle-icon main-menu__toggle-icon--close" version="1.0" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="23.867px" height="23.867px" viewBox="0 0 23.867 23.867" enable-background="new 0 0 23.867 23.867" xml:space="preserve">
-            <path fill="#FFFFFF" d="M15.087,11.933l8.56-8.559c0.293-0.293,0.293-0.768,0-1.061L21.554,0.22C21.414,0.079,21.223,0,21.023,0 c-0.199,0-0.391,0.079-0.529,0.22l-8.561,8.56l-8.56-8.56c-0.282-0.282-0.78-0.282-1.061,0L0.22,2.313 c-0.293,0.293-0.293,0.768,0,1.061l8.56,8.559l-8.56,8.559c-0.293,0.293-0.293,0.768,0,1.062l2.093,2.094 c0.141,0.142,0.331,0.22,0.53,0.22c0.199,0,0.39-0.078,0.53-0.22l8.561-8.56l8.56,8.56c0.141,0.142,0.332,0.22,0.53,0.22 c0.199,0,0.39-0.078,0.53-0.22l2.093-2.094c0.293-0.294,0.293-0.769,0-1.062L15.087,11.933z"/>
-          </svg>
-        </button>
-        <ul class="main-menu__list">
-          <li class="main-menu__list-item">
-            <a class="main-menu__list-link" href="index.html">Главная</a>
-          </li>
-          <li class="main-menu__list-item">
-            <a class="main-menu__list-link">Фотографии</a>
-          </li>
-          <li class="main-menu__list-item">
-            <a class="main-menu__list-link" href="form.html">Конкурс</a>
-          </li>
-          <li class="main-menu__list-item">
-            <a class="main-menu__list-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-          </li>
-        </ul>
-      </nav>
+            </svg>
+            <svg class="main-menu__toggle-icon main-menu__toggle-icon--close" version="1.0" xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="23.867px" height="23.867px" viewBox="0 0 23.867 23.867" enable-background="new 0 0 23.867 23.867" xml:space="preserve">
+              <path fill="#FFFFFF" d="M15.087,11.933l8.56-8.559c0.293-0.293,0.293-0.768,0-1.061L21.554,0.22C21.414,0.079,21.223,0,21.023,0 c-0.199,0-0.391,0.079-0.529,0.22l-8.561,8.56l-8.56-8.56c-0.282-0.282-0.78-0.282-1.061,0L0.22,2.313 c-0.293,0.293-0.293,0.768,0,1.061l8.56,8.559l-8.56,8.559c-0.293,0.293-0.293,0.768,0,1.062l2.093,2.094 c0.141,0.142,0.331,0.22,0.53,0.22c0.199,0,0.39-0.078,0.53-0.22l8.561-8.56l8.56,8.56c0.141,0.142,0.332,0.22,0.53,0.22 c0.199,0,0.39-0.078,0.53-0.22l2.093-2.094c0.293-0.294,0.293-0.769,0-1.062L15.087,11.933z"/>
+            </svg>
+          </button>
+          <ul class="main-menu__list">
+            <li class="main-menu__list-item">
+              <a class="main-menu__list-link" href="index.html">Главная</a>
+            </li>
+            <li class="main-menu__list-item">
+              <a class="main-menu__list-link">Фотографии</a>
+            </li>
+            <li class="main-menu__list-item">
+              <a class="main-menu__list-link" href="form.html">Конкурс</a>
+            </li>
+            <li class="main-menu__list-item">
+              <a class="main-menu__list-link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
     <main>
-      <section class="page-title">
-        <h1 class="page-title__text">Фотографии пользователей</h1>
+      <section class="page-title page-title--photo">
+        <h1 class="page-title__text">Фотографии<br>пользователей</h1>
       </section>
       <section class="content-header">
         <p>Взгляните на фотографии, которые выкладывают пользователи!</p>
@@ -57,13 +63,16 @@
       </section>
       <section class="gallery">
         <ul class="gallery__list">
-          <li class="gallery__list-item">
+          <li class="gallery__list-item gallery__list-item--panorama">
             <article class="note">
               <div class="note__image-wrapper note__image-wrapper--panorama note__image-wrapper--panorama-of-the-day">
-                <img class="note__image" src="img/panorama-mobile@1x.jpg" alt="PINK. Анна: Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!" width="320" height="137"/>
+                <picture>
+                  <source media="(min-width: 661px)" srcset="img/panorama-desktop@1x.jpg">
+                  <source media="(min-width: 321px)" srcset="img/panorama-tablet@1x.jpg">
+                  <img class="note__image note__image--panorama" src="img/panorama-mobile@1x.jpg" alt="PINK. Анна: Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!"/>
+                </picture>
               </div>
-              <p class="note__author">Анна</p>
-              <div class="note__time">(5 минут назад)</div>
+              <p class="note__author">Анна <span class="note__time">(5 минут назад)</span></p>
               <p class="note__content">Прыгать или нет? Напишите в коментарии свой совет и смотрите прямую трансляцию в перископе, задавайте
                 свои вопросы!</p>
               <a class="note__likes" href="#">
@@ -80,10 +89,13 @@
           <li class="gallery__list-item">
             <article class="note">
               <div class="note__image-wrapper">
-                <img class="note__image" src="img/photo-car-mobile@1x.jpg" alt="PINK. Левон: Вчера он на луну летал, сегодня в руки к нам попал." width="280" height="180"/>
+                <picture>
+                  <source media="(min-width: 661px)" srcset="img/photo-car-desktop@1x.jpg">
+                  <source media="(min-width: 321px)" srcset="img/photo-car-tablet@1x.jpg">
+                  <img class="note__image" src="img/photo-car-mobile@1x.jpg" alt="PINK. Левон: Вчера он на луну летал, сегодня в руки к нам попал."/>
+                </picture>
               </div>
-              <p class="note__author">Левон</p>
-              <div class="note__time">(5 часов назад)</div>
+              <p class="note__author">Левон <span class="note__time">(5 часов назад)</span></p>
               <p class="note__content">Вчера он на луну летал, сегодня в руки к нам попал.</p>
               <a class="note__likes" href="#">
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
@@ -99,10 +111,13 @@
           <li class="gallery__list-item">
             <article class="note">
               <div class="note__image-wrapper">
-                <img class="note__image" src="img/photo-drumset-mobile@1x.jpg" alt="PINK. Антон: Соседи будут рады!" width="280" height="180"/>
+                <picture>
+                  <source media="(min-width: 661px)" srcset="img/photo-drumset-desktop@1x.jpg">
+                  <source media="(min-width: 321px)" srcset="img/photo-drumset-tablet@1x.jpg">
+                  <img class="note__image" src="img/photo-drumset-mobile@1x.jpg" alt="PINK. Антон: Соседи будут рады!"/>
+                </picture>
               </div>
-              <p class="note__author">Антон</p>
-              <div class="note__time">(12 часов назад)</div>
+              <p class="note__author">Антон <span class="note__time">(12 часов назад)</span></p>
               <p class="note__content">Соседи будут рады!</p>
               <a class="note__likes" href="#">
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
@@ -118,10 +133,13 @@
           <li class="gallery__list-item">
             <article class="note">
               <div class="note__image-wrapper">
-                <img class="note__image" src="img/photo-window-mobile@1x.jpg" alt="PINK. Борис: Здесь могла быть ваша цитата о высоком и вечном." width="280" height="180"/>
+                <picture>
+                  <source media="(min-width: 661px)" srcset="img/photo-window-desktop@1x.jpg">
+                  <source media="(min-width: 321px)" srcset="img/photo-window-tablet@1x.jpg">
+                  <img class="note__image" src="img/photo-window-mobile@1x.jpg" alt="PINK. Борис: Здесь могла быть ваша цитата о высоком и вечном."/>
+                </picture>
               </div>
-              <p class="note__author">Борис</p>
-              <div class="note__time">(20 часов назад)</div>
+              <p class="note__author">Борис <span class="note__time">(20 часов назад)</span></p>
               <p class="note__content">Здесь могла быть ваша цитата о высоком и вечном.</p>
               <a class="note__likes" href="#">
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
@@ -137,10 +155,13 @@
           <li class="gallery__list-item">
             <article class="note">
               <div class="note__image-wrapper">
-                <img class="note__image" src="img/photo-fair-mobile@1x.jpg" alt="PINK. Сергей: Самая кубанская в мире!" width="280" height="180"/>
+                <picture>
+                  <source media="(min-width: 661px)" srcset="img/photo-fair-desktop@1x.jpg">
+                  <source media="(min-width: 321px)" srcset="img/photo-fair-tablet@1x.jpg">
+                  <img class="note__image" src="img/photo-fair-mobile@1x.jpg" alt="PINK. Сергей: Самая кубанская в мире!"/>
+                </picture>
               </div>
-              <p class="note__author">Сергей</p>
-              <div class="note__time">(25 часов назад)</div>
+              <p class="note__author">Сергей <span class="note__time">(25 часов назад)</span></p>
               <p class="note__content">Самая кубанская в мире!</p>
               <a class="note__likes" href="#">
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
@@ -156,10 +177,13 @@
           <li class="gallery__list-item">
             <article class="note">
               <div class="note__image-wrapper">
-                <img class="note__image" src="img/photo-pov-mobile@1x.jpg" alt="PINK. Максим: Где снег-то?" width="280" height="180"/>
+                <picture>
+                  <source media="(min-width: 661px)" srcset="img/photo-pov-desktop@1x.jpg">
+                  <source media="(min-width: 321px)" srcset="img/photo-pov-tablet@1x.jpg">
+                  <img class="note__image" src="img/photo-pov-mobile@1x.jpg" alt="PINK. Максим: Где снег-то?"/>
+                </picture>
               </div>
-              <p class="note__author">Максим</p>
-              <div class="note__time">(40 часов назад)</div>
+              <p class="note__author">Максим <span class="note__time">(40 часов назад)</span></p>
               <p class="note__content">Где снег-то?</p>
               <a class="note__likes" href="#">
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
@@ -175,10 +199,13 @@
           <li class="gallery__list-item">
             <article class="note">
               <div class="note__image-wrapper">
-                <img class="note__image" src="img/photo-wing-mobile@1x.jpg" alt="PINK. Надежда: Всем GM и взаимные лайки!" width="280" height="180"/>
+                <picture>
+                  <source media="(min-width: 661px)" srcset="img/photo-wing-desktop@1x.jpg">
+                  <source media="(min-width: 321px)" srcset="img/photo-wing-tablet@1x.jpg">
+                  <img class="note__image" src="img/photo-wing-mobile@1x.jpg" alt="PINK. Надежда: Всем GM и взаимные лайки!"/>
+                </picture>
               </div>
-              <p class="note__author">Надежда</p>
-              <div class="note__time">(45 часов назад)</div>
+              <p class="note__author">Надежда <span class="note__time">(45 часов назад)</span></p>
               <p class="note__content">Всем GM и взаимные лайки!</p>
               <a class="note__likes" href="#">
                 <svg version="1.0" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
@@ -248,5 +275,6 @@
         </svg>
       </a>
     </footer>
+    <script src="js/app.js"></script>
   </body>
 </html>
